--- a/home/templates/editadmin.html
+++ b/home/templates/editadmin.html
@@ -18,7 +18,7 @@
             <p><br></p>
             <input type="email" placeholder="{{ pro.Email }}" name="email">
             <p><br></p>
-            <button type="submit" name="username" value={{pro.username}}>Save Changes</button>
+            <button type="submit" name="username" value={{pro.Username}}>Save Changes</button>
         </form>
         {% endblock %}
 	</body>
