--- a/home/templates/profile.html
+++ b/home/templates/profile.html
@@ -14,7 +14,7 @@
                 <p>Last Name : {{ pro.Last_Name }}</p>
                 <p>Email : {{ pro.Email }}</p>
                 <p>Phone number : {{ pro.Phone_no }}</p>
-                <p>Username : {{pro.username}}</p>
+                <p>Username : {{pro.Username}}</p>
                 <p><br></p>
                 <h4>{{edits}}</h4>
         {% endblock %}
