--- a/home/templates/login.html
+++ b/home/templates/login.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Authentication</title>
+        <title>Blogging</title>
         {% extends 'home.html' %}
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     </head>
@@ -16,12 +16,12 @@
             <p><br></p>
             <input id="pass" type="password" placeholder="Password" name="pass" required>
             <p><br></p>
-            <input type="submit" value="Log In">
+            <button>Log In</button>
             </form>
                 <p><br></p>
-                <a href="/signup/"><input type="submit" value="New User ?"></a>
+                <a href="/signup/"><button>New User ?</button></a>
                 <p><br></p>
-                <a href="/forgotpassword/"><input type="submit" value="Forgot Password ?"></a>
+                <a href="/forgotpassword/"><button>Forgot Password ?"</button></a>
                 <p><br></p>
         </div>
         <br>
