--- a/home/templates/changepass.html
+++ b/home/templates/changepass.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Authentication</title>
+        <title>Blogging</title>
         {% extends 'home.html' %}
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     </head>
@@ -16,7 +16,7 @@
             <p><br></p>
             <input type="password" id="confirm_password" placeholder="New Password again" name="npassa" pattern=".{8,}" title="Atleast 8 characters">
             <p><br></p>
-            <input type="submit" value="Change Password">
+            <button>Change Password</button>
         </form>
         {% endblock %}
     </body>
