--- a/home/templates/edit.html
+++ b/home/templates/edit.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Authentication</title>
+        <title>Blogging</title>
         {% extends 'home.html' %}
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     </head>
@@ -18,7 +18,10 @@
             <p><br></p>
             <input type="email" placeholder="{{ pro.Email }}" name="email">
             <p><br></p>
-            <input type="submit" value="Save Changes">
+            <button>Save Changes</button>
+        </form><br>
+        <form action="/changepass/" method="POST">{% csrf_token %}
+            <button>Change Password</button>
         </form>
         {% endblock %}
 	</body>
