--- a/home/templates/editpost.html
+++ b/home/templates/editpost.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Authentication</title>
+        <title>Blogging</title>
         {% extends 'home.html' %}
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     </head>
@@ -10,7 +10,7 @@
         {% block bodyhere %}
         <h2>Edit Post</h2><br>
         <form action="/editingpost/" method="post">{% csrf_token %}
-            <textarea placeholder="{{ post.caption }}" name="capt" rows="10" cols="30"></textarea>
+            <textarea placeholder="{{ post.caption }}" name="capt" rows="10" cols="30"></textarea><br>
             <button name="pid" value="{{post.id}}">Save Changes</button>
         </form>
         {% endblock %}
