--- a/home/templates/signup.html
+++ b/home/templates/signup.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-		<title>Authentication</title>
+		<title>Blogging</title>
 		{% extends 'home.html' %}
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     </head>
@@ -24,7 +24,7 @@
 				<p><br></p>
 				<input id="pass" type="password" placeholder="Password" name="pass" pattern=".{8,}" title="Atleast 8 characters" required>
 				<p><br></p>
-				<input type="submit" value="Register">
+				<button>Register</button>
 			</form>
 			<br>
 		<h4>{{error}}</h4>
