Notification section added

--- a/home/templates/bookmarks.html
+++ b/home/templates/bookmarks.html
@@ -13,7 +13,7 @@
         <div style="border: thick solid black; padding: 5px; margin-left: 200px; margin-right: 200px;">
             {% if i.Username %}
                 <h3>By {{ i.Username }}</h3>
-                <img src="{{i.Image.url}}">
+                <img height="500px" width="500px" style="max-width: 100%; height: auto;" class="imag-thumbnail img-responsive" src="{{i.Image.url}}">
                 <h4>{{i.caption}}</h4>
                 <br><form action="/removebookmark/" method="POST">{% csrf_token %}
                     <button value="{{i.id}}" name="object">Remove Bookmark</button>
