--- a/home/templates/signup.html
+++ b/home/templates/signup.html
@@ -10,22 +10,26 @@
 	<h1>Hello New User !</h1>
 	<div>
 		{% block bodyhere %}
-		<h2>Please enter the details</h1><br>
-            <form action="/registering/" method="post">{% csrf_token %}
-				<input type="text" placeholder="First Name" name="fname" required>
+		<h2>Please enter the details</h2><br>
+			<div style="margin-left: 500px; margin-right: 620px;">
+            <form style="text-align: left;" action="/registering/" method="post">{% csrf_token %}
+				<label>First Name : </label><input style="float: right;" type="text" placeholder="First Name" name="fname" required>
 				<p><br></p>
-				<input type="text" placeholder="Last Name" name="lname" required>
+				<label>Last Name : </label><input style="float: right;" type="text" placeholder="Last Name" name="lname" required>
 				<p><br></p>
-				<input title="10 Digits and should be valid" type="number" pattern="[9876]{3}.[0-9]{7}" placeholder="Phone Number" name="phno" required>
+				<label>Phone Number : </label><input style="float: right;" title="10 Digits and should be valid" type="number" pattern="[9876]{3}.[0-9]{7}" placeholder="Phone Number" name="phno" required>
 				<p><br></p>
-				<input id="emails" type="email" placeholder="Email" name="email" required>
+				<label>Email Address : </label><input style="float: right;" id="emails" type="email" placeholder="Email" name="email" required>
 				<p><br></p>
-				<input id="username" type="text" placeholder="Username" name="username" required>
+				<label>Unique Username : </label><input style="float: right;" id="username" type="text" placeholder="Username" name="username" required>
 				<p><br></p>
-				<input id="pass" type="password" placeholder="Password" name="pass" pattern=".{8,}" title="Atleast 8 characters" required>
+				<label>Password : </label><input style="float: right;" id="pass" type="password" placeholder="Password" name="pass" pattern=".{8,}" title="Atleast 8 characters" required>
+				<p><br></p>
+				<textarea name="about" placeholder="Tell people about yourself" rows="10" cols="50"></textarea> 
 				<p><br></p>
 				<button>Register</button>
 			</form>
+		</div>
 			<br>
 		<h4>{{error}}</h4>
 		{% endblock %}
