--- a/home/templates/viewposts.html
+++ b/home/templates/viewposts.html
@@ -15,16 +15,16 @@
         <div style="border: thick solid black; padding: 5px; margin-left: 200px; margin-right: 200px;">
             <img height="500px" width="500px" style="max-width: 100%; height: auto;" class="imag-thumbnail img-responsive" src="{{ i.Image.url }}">
             <h4>{{ i.caption }}</h4>
+            
             <div style="width: 100%;">
                 <a onclick="showLikes({{i.id}})" href="#LikesModal" data-toggle="modal" id="totalL{{i.id}}" style="padding-right: 50px;">View Likes</a>
                 <a onclick="showComments({{i.id}})" href="#CommentsModal" data-toggle="modal" id="totalC{{i.id}}">View Comments</a><br>
                 <form style="display:inline-block; padding: 10px;" action="/editpost/" method="POST">{% csrf_token %}
                     <button value="{{ i.id }}" name="pid">Edit Post</button>
                 </form>
-                <form style="display:inline-block" action="/deletepost/" method="POST">{% csrf_token %}
-                    <button value="{{ i.id }}" name="pid">Delete Post</button>
-                </form> 
-            </div>
+                {% csrf_token %}
+                <button onclick="deletepost({{i.id}})" id="del" data-toggle="modal" data-target="#deleteModal">Delete Post</button>
+           </div>
         </div><br>
         {% endfor %}
         <div class="modal fade" id="LikesModal" role="dialog">
@@ -57,6 +57,35 @@
               </div>
             </div>  
         </div>
+        <div class="modal fade" id="deleteModal" role="dialog">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title">Delete Post</h5>
+              </div>
+              <div class="modal-body">
+                  Are you sure you want to delete the task ?
+              </div>
+              <div class="modal-footer">
+               <button name="taskid" style="background-color: black;" id="deleteit" type="button" class="btn btn-primary">Delete</button>
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+              </div>
+            </div>
+          </div>
+          </div>
+          <script>function deletepost(id)
+            {   
+                $('#deleteit').click(function()
+                {
+                    $.ajax({
+                        type:'POST',
+                        url:'/deletepost/',
+                        data:{'csrfmiddlewaretoken':$('input[csrfmiddlewaretoken]').val(),'pid':id},
+                        success:function(){location.reload();},
+                        error:function(){console.log('error')}
+                    });
+                })
+            }</script>
         {% endblock %}
     </body>
 </html>
